# VcpkgTest

./: CMakeLists.txt  CMakeSettings.json
src/: CmakeVcpkgTestF.cpp  CmakeVcpkgTestF.h
